# internship-project

cpp-project/: CMakeLists.txt  build.sh  buildandrun.sh  run.sh  test.csv  test.pcap
cpp-project/include/: Record.h  Sniffer.h  SnifferParams.h
cpp-project/src/: Sniffer.cpp  main.cpp
python-project/: grouped-test.csv  main.py  test.csv
